# api/api.go
@@ -49,11 +49,11 @@ func New(opt *RouterOptions) *gin.Engine {
 	// apiV1.GET("/likes/user-post", handlerV1.AuthMiddleware, handlerV1.GetLike)
 
 	// User
-	apiV1.POST("/users", handlerV1.AuthMiddleware, handlerV1.CreateUser)
+	apiV1.POST("/users", handlerV1.CreateUser)
 	apiV1.GET("/users", handlerV1.GetAllUsers)
 	apiV1.GET("/users/:id", handlerV1.GetUser)
-	apiV1.PUT("/users/:id", handlerV1.AuthMiddleware, handlerV1.UpdateUser)
-	apiV1.DELETE("/users/:id", handlerV1.AuthMiddleware, handlerV1.DeleteUser)
+	apiV1.PUT("/users/:id", handlerV1.UpdateUser)
+	apiV1.DELETE("/users/:id", handlerV1.DeleteUser)
 
 	// // Comment
 	// apiV1.GET("/comments", handlerV1.GetAllComment)
@@ -70,7 +70,13 @@ func New(opt *RouterOptions) *gin.Engine {
 	// apiV1.DELETE("/posts/:id", handlerV1.AuthMiddleware, handlerV1.DeletePost)
 
 	// file upload
-	apiV1.POST("/file-upload", handlerV1.AuthMiddleware, handlerV1.UploadFile)
+	apiV1.POST("/file-upload", handlerV1.UploadFile)
+
+	// hotel
+	apiV1.GET("/hotels", handlerV1.GetAllHotels)
+	apiV1.POST("/hotels", handlerV1.CreateHotel)
+	apiV1.GET("/hotels/:id", handlerV1.GetHotel)
+	apiV1.POST("/hotels/add-room", handlerV1.AddRoom)
 
 	// Register
 	apiV1.POST("/auth/register", handlerV1.Register)
@@ -78,7 +84,7 @@ func New(opt *RouterOptions) *gin.Engine {
 	apiV1.POST("/auth/login", handlerV1.Login)
 	apiV1.POST("/auth/forgot-password", handlerV1.ForgotPassword)
 	apiV1.POST("/auth/verify-forgot-password", handlerV1.VerifyForgotPassword)
-	apiV1.POST("/auth/update-password", handlerV1.AuthMiddleware, handlerV1.UpdatePassword)
+	apiV1.POST("/auth/update-password", handlerV1.UpdatePassword)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
