# api/docs/swagger.json
@@ -131,11 +131,6 @@
         },
         "/auth/update-password": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Update password",
                 "consumes": [
                     "application/json"
@@ -256,11 +251,6 @@
         },
         "/file-upload": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "File upload",
                 "consumes": [
                     "application/json"
@@ -298,12 +288,64 @@
             }
         },
         "/hotels": {
-            "post": {
-                "security": [
+            "get": {
+                "description": "Get all Hotels",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hotels"
+                ],
+                "summary": "Get all Hotels",
+                "parameters": [
                     {
-                        "ApiKeyAuth": []
+                        "type": "integer",
+                        "default": 10,
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "name": "sort_by_price",
+                        "in": "query"
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetAllHotelsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
                 "description": "Create a Hotel",
                 "consumes": [
                     "application/json"
@@ -330,7 +372,53 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Hotel"
+                            "$ref": "#/definitions/models.CreateHotel"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/hotels/add-room": {
+            "post": {
+                "description": "Add a room",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hotels"
+                ],
+                "summary": "Add a room",
+                "parameters": [
+                    {
+                        "description": "AddRoom",
+                        "name": "AddRoom",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AddRoom"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Room"
                         }
                     },
                     "400": {
@@ -445,11 +533,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Create a user",
                 "consumes": [
                     "application/json"
@@ -532,11 +615,6 @@
                 }
             },
             "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Update a userss",
                 "consumes": [
                     "application/json"
@@ -582,11 +660,6 @@
                 }
             },
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Delete a user",
                 "consumes": [
                     "application/json"
@@ -619,6 +692,29 @@
         }
     },
     "definitions": {
+        "models.AddRoom": {
+            "type": "object",
+            "properties": {
+                "hotel_id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "price_for_adults": {
+                    "type": "number"
+                },
+                "price_for_children": {
+                    "type": "number"
+                },
+                "room_type": {
+                    "type": "string"
+                }
+            }
+        },
         "models.AuthResponse": {
             "type": "object",
             "properties": {
@@ -674,6 +770,12 @@
                 },
                 "phone_number": {
                     "type": "string"
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "rooms_count": {
+                    "type": "integer"
                 }
             }
         },
@@ -719,6 +821,20 @@
                 }
             }
         },
+        "models.GetAllHotelsResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "hotels": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Hotel"
+                    }
+                }
+            }
+        },
         "models.GetAllUsersResponse": {
             "type": "object",
             "properties": {
@@ -756,9 +872,6 @@
                 },
                 "rating": {
                     "type": "number"
-                },
-                "room": {
-                    "$ref": "#/definitions/models.Room"
                 },
                 "rooms_count": {
                     "type": "integer"
@@ -811,18 +924,13 @@
                     "maxLength": 16,
                     "minLength": 6
                 },
-                "phone_number": {
-                    "type": "string"
-                },
-                "profile_image_url": {
-                    "type": "string"
-                },
                 "type": {
                     "type": "string",
                     "default": "user",
                     "enum": [
                         "superadmin",
-                        "user"
+                        "user",
+                        "admin"
                     ]
                 },
                 "username": {
